# pi-yat

./: .gitignore  README.md  package.json
examples/cryptoguard/: .env.example  README.md  demo.py  pyproject.toml  run.py
examples/cryptoguard/cryptoguard/: __init__.py  analyzer.py  api.py  audio.py  config.py  frames.py  models.py  pipeline.py  prompt.py  video.py
examples/cryptoguard/cryptoguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/cryptoguard/eval/: README.md  dataset.json  evaluate.py
examples/cryptoguard/frontend/: index.html  package.json  vite.config.js
examples/cryptoguard/frontend/src/: App.css  App.jsx
examples/cryptoguard/paper/: Makefile  main.tex  references.bib
examples/cryptoguard/tests/: conftest.py  test_api.py  test_audio.py  test_frames.py  test_models.py  test_pipeline.py  test_prompt.py
examples/mexgen-app/: .env.example  README.md  docker-compose.yml
examples/mexgen-app/backend/: Dockerfile  pyproject.toml
examples/mexgen-app/backend/app/: config.py  main.py
examples/mexgen-app/backend/app/api/: routes.py  websocket.py
examples/mexgen-app/backend/app/core/: explainer.py  jobs.py  models.py
examples/mexgen-app/backend/app/schemas/: types.py
examples/mexgen-app/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
examples/mexgen-app/frontend/src/: App.tsx  index.css
examples/mexgen-app/frontend/src/api/: client.ts
examples/mexgen-app/frontend/src/components/: ColorLegend.tsx  DocumentInput.tsx  ExplanationView.tsx  HighlightedText.tsx  OutputPanel.tsx  ProgressBar.tsx
extensions/: index.ts
(+3 files in other folders)
